# CPP

./: .gitignore  count_nts_fromfasta.cpp
BEDproject/: CMakeLists.txt  main.cpp
BEDproject/data/: test.bed
BEDproject/src/: BEDfile.cpp  BEDfile.h  cov2bed.cpp
DOCKER/: cmd  cpp_env.df.txt
DOCKER/app-vol/: cmd  cmd~  hello.c  main.c  main.c~
FastaProject/: CMakeLists.txt
FastaProject/include/: Fasta.h  FastaFile.h
FastaProject/src/: Fasta.cpp  Fasta.h  FastaFile.cpp  FastaFile.h  cmd  main.cpp  test.fa
PATTERNS/CMD_LINE/: a.out  parse_cmd_line.cpp
PATTERNS/FILE/: README.md  a.out  acsvfile.csv  read_from_csv.cpp  read_from_text.cpp  read_from_textfile.cpp  read_specific_columns.cpp  write_text.cpp
PATTERNS/FILE/DATA/: in.csv
PATTERNS/FILE/GZIP/: decompress_file.cpp
PATTERNS/FUNCTIONS/TEMPLATE/: a_template  a_template.cpp  a_template.hpp
PATTERNS/HEADERS/EX1/: a.out  add.cpp  main.cpp
PATTERNS/MAP/: README.md  create_map.cpp
PATTERNS/OOP/: simple_class.cpp
PATTERNS/PARSING/: skip_lines_starting_w.cpp
PATTERNS/PARSING/DATA/: in.txt
PATTERNS/PROFILING/: README.md  time_taken.cpp
PATTERNS/REGEX/: regex1.cpp
PATTERNS/STRING/: README.md  letter_counter.cpp  string_splitter.cpp
PATTERNS/VECTOR/: README.md  add_int_elements.cpp  sort_ascending.cpp  sort_descending.cpp
VCFParser/: .gitignore  CMakeLists.txt
VCFParser/include/: VCFReader.h  gzip.h
VCFParser/src/: VCFReader.cpp  main.cpp
WIGParser/: fetch_by_coord_from_wig.cpp
docs/.ipynb_checkpoints/: CMake- A CMakeList.txt file for a very simple C++ project-checkpoint.ipynb
(+1 files in other folders)
